[metadata]
name = django-batteries
version = 0.0.1
description = A Django app to render db-schema
long_description = file: README.md
author = Oleksandr Korol
author_email = zibertua@gmail.com
license = MIT-Clause  # Example license
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.12 
